fix brand image size to align with subtitle

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -325,9 +325,9 @@ p, .bootstrap-tagsinput{
       background-color: $dprimary;
     }
     .brand{
-      margin-top: 55px;
+      margin-top: 60px;
       img{
-        height: 75px;
+        height: 56px;
       }
       p{
         margin-top: 10px;
